--- a/_includes/advertisements.html
+++ b/_includes/advertisements.html
@@ -1,10 +1,10 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9956886414358751"
      crossorigin="anonymous"></script>
-<!-- ngrock -->
+<!-- ngrock2 -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-9956886414358751"
-     data-ad-slot="3648593672"
+     data-ad-slot="5062134730"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
